--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   
   <body>
     <h1>Projects</h1>
+    <nav>
+      <ul>
+        <li>Responsive Web Design<li>
+          <ul>
+            <li><a href="Responsive Web Design/Tribute Page/index.html" target="_blank">Tribute Page</a><li>
+        </ul>
+      </ul>
+    </nav>
   </body>
   
 </html>
