--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <ul>
         <li>Responsive Web Design<li>
           <ul>
-            <li><a href="Responsive Web Design/Tribute Page/index.html" target="_blank">Tribute Page</a><li>
+            <li><a href="Responsive Web Design/Tribute Page/index.html" target="_blank">Tribute Page</a></li>
         </ul>
       </ul>
     </nav>
