--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -51,7 +51,7 @@
 
       <!-- Dropdown Menu Start -->
       <div id="favorite">
-        <p>What is your outdoor activity?</p>
+        <p>What is your favorite outdoor activity?</p>
         <select name="dropdown" id="dropdown">
           <option value="hiking">Hiking</option>
           <option value="climbing">Climbing</option>
