--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
           <ul>
             <li><a href="Responsive Web Design/Tribute Page/index.html" target="_blank">Tribute Page</a></li>
             <li><a href="Responsive Web Design/Survey Form/index.html" target="_blank">Survey Form</a></li>
+            <li><a href="Responsive Web Design/Landing Page/index.html" target="_blank">Landing Page</a></li>
         </ul>
       </ul>
     </nav>
