--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -51,7 +51,7 @@
 
       <!-- Dropdown Menu Start -->
       <div id="favorite">
-        <p>What is your favorite outdoor activity?</p>
+        <p>What is your outdoor activity?</p>
         <select name="dropdown" id="dropdown">
           <option value="hiking">Hiking</option>
           <option value="climbing">Climbing</option>
@@ -126,6 +126,6 @@
       <!-- Textarea Comments End -->
       <button type="submit" id="submit">Submit</button>
     </form>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
   </body>
 </html>
