--- a/Responsive Web Design/Survey Form/index.html
+++ b/Responsive Web Design/Survey Form/index.html
@@ -126,6 +126,6 @@
       <!-- Textarea Comments End -->
       <button type="submit" id="submit">Submit</button>
     </form>
-    <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> 
   </body>
 </html>
