--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <li><a href="Responsive Web Design/Survey Form/index.html" target="_blank">Survey Form</a></li>
             <li><a href="Responsive Web Design/Landing Page/index.html" target="_blank">Landing Page</a></li>
         </ul>
+        <li>Front End Frameworks</li>
+          <ul>
+            <li><a href="./FrontEndFrameworks/RandomQuoteGenerator/build/index.html" target="_blank">Random Quote Generator</a></li>
+          </ul>
       </ul>
     </nav>
   </body>
