Renamed folders and updated paths in index.html files

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
       <ul>
         <li>Responsive Web Design<li>
           <ul>
-            <li><a href="Responsive Web Design/Tribute Page/index.html" target="_blank">Tribute Page</a></li>
-            <li><a href="Responsive Web Design/Survey Form/index.html" target="_blank">Survey Form</a></li>
-            <li><a href="Responsive Web Design/Landing Page/index.html" target="_blank">Landing Page</a></li>
+            <li><a href="./responsive-web-design/tribute-page/index.html" target="_blank">Tribute Page</a></li>
+            <li><a href="./responsive-web-design/survey-form/index.html" target="_blank">Survey Form</a></li>
+            <li><a href="./responsive-web-design/landing-page/index.html" target="_blank">Landing Page</a></li>
         </ul>
         <li>Front End Frameworks</li>
           <ul>
-            <li><a href="./FrontEndFrameworks/RandomQuoteGenerator/build/index.html" target="_blank">Random Quote Generator</a></li>
+            <li><a href="./frontend-frameworks/random-quote-generator/build/" target="_blank">Random Quote Generator</a></li>
           </ul>
       </ul>
     </nav>
